--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "react-router": "^6.0.1",
-    "react-router-dom": "^6.0.1"
+    "react-router-dom": "^6.0.1",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
